# VortexMate

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: ai.h  chess_ai.h  chess_logic.h  config.h  db.h  menu.h  models.h  network.h  save.h  ui.h
saves/: schema.sql
src/: ai.c  chess_ai.c  chess_logic.c  config.c  db.c  main.c  menu.c  models.c  network.c  save.c  ui.c
